2006-05-02  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpproceduraldb.[ch] (gimp_procedural_db_set_data):
	added const qualifier.

2006-05-02  Sven Neumann  <sven@gimp.org>

	* fileicon.ico
	* wilber.ico: new icons for the Windows build created by Jernej
	Simončič based on the icons drawn by Jimmac (bug #340223).

2006-04-29  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in.[ch]: removed plug_in_push() and
	plug_in_pop()...

	* app/plug-in/gimppluginmanager.[ch]: ...and added them here as
	gimp_plug_in_manager_plug_in_push() and _pop()

	* app/plug-in/plug-in-message.c (plug_in_handle_proc_run): changed
	accordingly.

	* app/plug-in/plug-in.c (plug_in_close): removed an unused
	variable, moved another one to a local scope.

	* app/plug-in/plug-in.h: indentation.

2006-04-29  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimppluginmanager-locale-domain.c
	(gimp_plug_in_manager_get_locale_domains): NULL-terminate string
	arrays here too, so they can be freed with g_strfreev() (even
	though they currently aren't).

	* app/widgets/gimphelp.c: set the plug-in arguments
	correctly. Fixes warnings and makes help work again.

2006-04-29  Sven Neumann  <sven@gimp.org>

	* app/dialogs/user-install-dialog.c: fixed signal connection.

	* app/core/gimp-user-install.c: indentation.

2006-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am (AM_CPP_FLAGS): define GIMP_APP_VERSION.

	* app/core/gimp-user-install.c: use GIMP_APP_VERSION instead of
	hardcoding it.

2006-04-29  Sven Neumann  <sven@gimp.org>

	* app/core/Makefile.am
	* app/core/gimp-user-install.[ch]: new files based on code that
	used to live in user-install-dialog.c.

	* app/dialogs/user-install-dialog.[ch]: only the dialog code
	remained here.

	* app/app_procs.c: use the new user-install API.  Perform a
	non-interactive user installation when running without a display.

2006-04-29  Tor Lillqvist  <tml@novell.com>

	* app/plug-in/gimppluginmanager-locale-domain.c